--- a/doc/pages/dev_tut_add_handler.dox
+++ b/doc/pages/dev_tut_add_handler.dox
@@ -31,7 +31,7 @@ Now let's see how to write the handler.
 First, we'll have a look at the header file. Here is \c HIfStatement.h :
 \dontinclude OOInteraction/src/handlers/HIfStatement.h
 \skip pragma
-\until } /* namespace OOInteraction
+\until } /\* namespace OOInteraction
 
 Each handler must inherit from Visualization::InteractionHandler. In practice the only handler that directly inherits
 from it is Interaction::GenericHandler. This is where a lot of common functionality is implemented. Therefore it is
@@ -53,7 +53,7 @@ Let's look at the \c .cpp file to see what this handler does exactly.
 Here is the complete contents of the \c HIfStatement.cpp :
 \dontinclude OOInteraction/src/handlers/HIfStatement.cpp
 \skip include
-\until } /* namespace OOInteraction
+\until } /\* namespace OOInteraction
 \dontinclude OOInteraction/src/handlers/HIfStatement.cpp
 
 As the rest is trivial we'll jump directly to the \c keyPressEvent() method and examine it piece by piece:
