--- a/doc/pages/dev_tut_add_node.dox
+++ b/doc/pages/dev_tut_add_node.dox
@@ -19,7 +19,7 @@ for declaring nodes that makes it really easy to define new node types.
 Here is \c IfStatement.h :
 \dontinclude OOModel/src/statements/IfStatement.h
 \skip pragma
-\until } /* namespace OOModel
+\until } /\* namespace OOModel
 \dontinclude OOModel/src/statements/IfStatement.h
 
 Let's examine it starting from the top. The first noteworthy bit is:
@@ -94,7 +94,7 @@ consists of. The rest of the code is just boilerplate.
 Here is \c IfStatement.cpp :
 \dontinclude OOModel/src/statements/IfStatement.cpp
 \skip include
-\until } /* namespace OOModel
+\until } /\* namespace OOModel
 \dontinclude OOModel/src/statements/IfStatement.cpp
 
 All of the things here are just the corresponding definition macros. The only interesting bit is:
