--- a/ModelBase/doc/ModelBase.dox
+++ b/ModelBase/doc/ModelBase.dox
@@ -1,21 +1,21 @@
 /*! \namespace Model
 
-The ModelBase plug-in defines the structure and basic functionality of the application model in Envision.
+The ModelBase plug-in defines the structure and basic functionality of the application tree in Envision.
 
-The application model is the primary source that defines an application. It also contains artifacts supporting the
-software engineering process. The model is a tree structure which is roughly similar to an abstract syntax tree (AST).
-Two major differences are that the model is not generated based on a different representation but is the original
-source and that it can contain arbitrary data. Similarly to an AST the different nodes in the model represent
+The application tree is the primary source that defines an application. It also contains artifacts supporting the
+software engineering process. The tree is a structure which is roughly similar to an abstract syntax tree (AST).
+Two major differences are that the application tree is not generated based on a different representation but is the original
+source and that it can contain arbitrary data. Similarly to an AST the different nodes in the application tree represent
 programming constructs (or or other artifacts) and the edges of the tree represent containment. The root of the tree is
 an entity which represents the entire application that is being developed.
 
-Models for specific programming paradigms (e.g. OO, scripting) can be created by extending the functionality defined by
+Trees for specific programming paradigms (e.g. OO, scripting) can be created by extending the functionality defined by
 ModelBase.
 
-<h3>Structure of the application model</h3>
-The application model in Envision is a tree structure where each node is derived from Node. Each such tree structure has
-an associated Model object that manages various aspects of the model. Together these two classes form the core of the
-model in Envision.
+<h3>Structure of the application tree</h3>
+The application tree in Envision is a tree structure where each node is derived from Node. Each such tree structure has
+an associated TreeManager object that manages various aspects of the tree. Together these two classes form the core of
+the application tree in Envision.
 
 A node in the tree corresponds to a logical element in the application under development. This could be for instance a
 class, a method, a statement, a numerical value, an image, a comment, etc. A node's children are elements that define
@@ -37,13 +37,13 @@ following functionality:
 	Whenever possible default behavior is already implemented for the functions of Node to simplify development of new
 	node types.
 	
-	The Model class implements functionality for managing a single model tree. A tree corresponds to at most one such
-	object. Here are the management functions that it provides:
-	\li Tree creation - A newly constructed model does not yet have an associated tree. The Model object can be used to
-	construct the root node of the model.
-	\li Saving and loading - the Model coordinates the saving and loading of applications using a PersistentStore.
-	\li Access control - In order to assure correct behavior of the system when there is concurrent access to the model
-	tree, the access is controlled in the Model object.
+	The TreeManager class implements functionality for managing a single application tree. A tree corresponds to at
+	most one such manger object. Here are the management functions that it provides:
+	\li Tree creation - A newly constructed TreeManager does not yet have an associated tree. The TreeManager object
+	can be used to construct the root node of the application tree.
+	\li Saving and loading - the TreeManager coordinates the saving and loading of applications using a PersistentStore.
+	\li Access control - In order to assure correct behavior of the system when there is concurrent access to the
+	application	tree, the access is controlled in the TreeManager object.
 	\li Undo support - this object keeps a history of previous commands and provides methods that restore the tree
 	structure to a known previous state.
 
@@ -79,7 +79,7 @@ specifies additional child nodes. Attributes defined in base classes are of cour
 for a node type at run-time as long as no instances of this class have been created yet. The attributes specified in the
 extension will be added to the attributes that are already defined in the node type being extended. This change will
 apply to all nodes that derive from the extended class. This feature can be used by plug-ins to attach new information
-to a model tree.
+to a application tree.
 
 The image below illustrates these mechanisms with an example.
 
@@ -114,21 +114,21 @@ verification and analysis while the user is typing.
 
 Receiving information about the program such as compilation and verification errors, testing statistics, profiling
 reports, etc. in real time can be a huge boost to productivity. Therefore having a mechanism that enables concurrent
-access to the source code or the application model in the case of Envision is crucial. The ModelBase plug-in implements
-a such a mechanism that controls the access to the tree structure of a model. For maximum flexibility a number of
+access to the source code or the application tree in the case of Envision is crucial. The ModelBase plug-in implements
+a such a mechanism that controls the access to the tree structure of an application. For maximum flexibility a number of
 different ways to access the tree exist. This allows tools with different needs to use an appropriate access mode and
 optimally utilize resources.
 
-The different access modes to an application model are presented below:
+The different access modes to an application tree are presented below:
 
 \b Write - only one thread at a time is allowed to have write access to the tree structure. This assures that modifying
-threads will operate in a model that will stay in a consistent state. This is typically the thread which processes user
+threads will operate in a tree that will stay in a consistent state. This is typically the thread which processes user
 input and acts on the tree structure accordingly.
 
 <b>Global read</b> - Any number of threads can simultaneously have global read access to the tree. The system guarantees
 that the tree will not be modified while there are active global readers. Any thread that needs to modify the tree will
 have to wait until all global readers have finished their operation. This mode can be used for threads which must
-operate on a consistent data structure throughout the entire model. Such tasks include persistence, compilation and
+operate on a consistent data structure throughout the entire tree. Such tasks include persistence, compilation and
 others.
 
 <b>Local read</b> - Local readers can run in parallel with threads that modify the tree state. To better manage this
@@ -136,7 +136,7 @@ process there are two types of local read access:
 	\li \b Blocking - these readers lock a part of the tree called an access unit. Any number of readers can read the
 	same access unit, but a writer has to wait for all blocking readers to finish their execution or leave the access
 	unit before the writer is granted permission to modify that access unit. A blocking local reader can simultaneously
-	operate on multiple access units. This access mode is designed for background tasks which work with the model but
+	operate on multiple access units. This access mode is designed for background tasks which work with the tree but
 	should not hinder the programmer from manipulating it. Especially when coupled with the InterruptibleThread thread
 	class described below, the blocking access mode is a good choice for tasks such as symbol indexing, type-checking,
 	local analysis or collection of statistics.
@@ -145,34 +145,36 @@ process there are two types of local read access:
 	of nodes read by such a reader. This access mode should be used with caution and is designed to be used only in cases
 	where other synchronization means are employed.
 
-The concept of access units and the implementation of synchronization mechanisms in the tree model in Envision are
+The concept of access units and the implementation of synchronization mechanisms in the application tree in Envision are
 illustrated in the figure below.
 
-\image html "concurency.png" "An example of a model with access locks"
+\image html "concurency.png" "An example of an application tree with access locks"
 
 All synchronization is achieved by means of Reader-Writer locks provided by the Qt framework. Two such locks exist in
-the Model object corresponding to the tree. Optionally a node can declare that it is a new access unit and thus
+the TreeManager object corresponding to the tree. Optionally a node can declare that it is a new access unit and thus
 contains a lock of its own. When a node contains a lock the corresponding access unit spans that node and all its
 children reachable without passing through another node which contains a lock. In the figure above, the nodes
 \e A, \e B, \e C, \e D, \e E and \e F contain a lock. The corresponding access units are colored in orange. If the root
-node does not contain a lock then the root access unit lock inside the Model is used to define the root access unit as
-shown. Otherwise that lock is not used at all.
+node does not contain a lock then the root access unit lock inside the TreeManager is used to define the root access
+unit as shown. Otherwise that lock is not used at all.
 
-A thread that wants to write must obtain the exclusive access lock inside the Model. To do this a plug-in needs to begin
-a modification session by calling the Model::beginModification(). This grants the plug-in write access. Afterwards it
+A thread that wants to write must obtain the exclusive access lock inside the TreeManager. To do this a plug-in needs
+to begin
+a modification session by calling the TreeManager::beginModification(). This grants the plug-in write access.
+Afterwards it
 can modify any node belonging to a single access unit. During a modification session the plug-in can request access to a
 different access unit. A writing thread must therefore also obtain the lock for that unit. To avoid deadlocks in this
 case it must first release the access lock it currently holds. This behavior is enforced by the system. A writing thread
 which tries to acquire the locks of two different access units at the same time will be terminated with an exception.
 The exclusive access lock can be released once the thread is finished modifying the application tree by calling
-Model::endModification(). A deadlock situation can only occur if a thread tries to acquire both read-only and write
-access permissions. Plug-ins which need to modify the model should directly initiate a write session which also allows
+TreeManager::endModification(). A deadlock situation can only occur if a thread tries to acquire both read-only and write
+access permissions. Plug-ins which need to modify the tree should directly initiate a write session which also allows
 the reading of tree nodes.
 
-To receive global read access a thread acquires the exclusive access lock in the model thereby preventing any writers
+To receive global read access a thread acquires the exclusive access lock in the TreeManager thereby preventing any writers
 from accessing the tree. Such a thread does not acquire any other locks. Global access is granted in the form of an
-access session that can be started by calling Model::beginExclusiveRead() and can be terminated with
-Model::endExclusiveRead(). There is no possibility of a deadlock since all readers can run in parallel, and writers do
+access session that can be started by calling TreeManager::beginExclusiveRead() and can be terminated with
+TreeManager::endExclusiveRead(). There is no possibility of a deadlock since all readers can run in parallel, and writers do
 not hold any locks while global readers are executing.
 
 Blocking local readers should only acquire a lock corresponding to the access unit containing the nodes they wish to
@@ -191,7 +193,7 @@ provided by ModelBase.
 
 <h3>Persistence interface</h3>
 
-Each node of the model supports an interface for saving and loading itself to and from a persistent store. This is a
+Each node of the tree supports an interface for saving and loading itself to and from a persistent store. This is a
 minimal interface that can work with integers, strings, floating point numbers and composite nodes. It is easy for
 plug-ins to provide implementations of this interface that work with specific storage media: files, databases, version
 control systems, etc.
@@ -209,22 +211,23 @@ underlying store. It can also be ignored which is the case, for instance, when c
 <h3>Undo</h3>
 The ModelBase plug-in provides undo functionality for tree operations. Following the command pattern each operation on
 the tree is executed as a command that can undo its effect. Of course once a command is undone it can be redone again.
-The command stack is part of the Model object managing each tree.
+The command stack is part of the TreeManager object managing each tree.
 
 Only writer threads are allowed to execute commands which modify the tree and only writer threads can request and undo
 or a redo operation. Each modification command is associated with a specific node. A writer thread must have acquired
-the lock corresponding to the access unit of that node. The interface of Model provides functionality for initiating
-and ending a write session and for changing the current write lock.
+the lock corresponding to the access unit of that node. The interface of TreeManager provides functionality for
+initiating and ending a write session and for changing the current write lock.
 
 <h3>Signals</h3>
-Client plug-ins can subscribe to a number of signals that are emitted by a Model object in order to receive
-notifications about model events. This is done using Qt’s signals and slots mechanism. Signals emitted include:
-	\li rootCreated - the specified node was just created as a root node for this model. A visualization plug-in can use
-	this signal in order to start visualizing the newly created model.
-	\li nodesModified - the specified nodes were modified. This signal is emitted after a part of the model tree has been
+Client plug-ins can subscribe to a number of signals that are emitted by a TreeManager object in order to receive
+notifications about application tree events. This is done using Qt’s signals and slots mechanism. Signals emitted
+include:
+	\li rootCreated - the specified node was just created as a root node for this tree. A visualization plug-in can use
+	this signal in order to start visualizing the newly created tree.
+	\li nodesModified - the specified nodes were modified. This signal is emitted after a part of the tree has been
 	modified. Many different plug-ins have interest in this event. For example a visualization plug-in should examine the
 	list of nodes that have been modified and update their representation. A verification plug-in can examine the
-	modifications and look for semantic errors. An incremental compiler might compile the new version of the model in the
+	modifications and look for semantic errors. An incremental compiler might compile the new version of the tree in the
 	background.
 	\li nameModified - the name of a symbol definition node was modified. This can be used for refactoring and
 	consistency purposes. For example, a plug-in that keeps the tree in a consistent state can find all references to
