--- a/VisualizationBase/doc/VisualizationBase.dox
+++ b/VisualizationBase/doc/VisualizationBase.dox
@@ -8,18 +8,18 @@ In that framework a QGraphicsScene is a virtual canvas where QGraphicsItem objec
 to visualize the scene or parts of it.
 
 VisualizationBase defines classes built upon the functionality of the Graphics View framework to provide essential
-features for visualizing and navigating application models. A number of extensibility concepts are also implemented
+features for visualizing and navigating application trees. A number of extensibility concepts are also implemented
 which make it easy to add custom functionality.
 
 <h3>Scenes</h3>
-A Scene is a data structure that contains the visual representation of one or more models and possibly other graphical
+A Scene is a data structure that contains the visual representation of one or more trees and possibly other graphical
 entities. It is a virtual canvas that is not visible itself but serves as the source for one or more views. Objects
-on this canvas are instances of Item or derived classes. Items which are part of a model visualization are structured
-in a hierarchy similar to the one of the model tree. Other graphical objects can have an arbitrary structure.
+on this canvas are instances of Item or derived classes. Items which are part of an application tree visualization are
+structured in a hierarchy similar to the one of the tree. Other graphical objects can have an arbitrary structure.
 
 A Scene has an associated ModelRenderer which is used to construct a visualization (instance of Item) from an arbitrary
-node in a model. Classes deriving from Item which represent a node must be registered with a ModelRenderer indicating
-what node type they can depict. The renderer is then used to draw visualizations of a model or of individual nodes.
+node in a tree. Classes deriving from Item which represent a node must be registered with a ModelRenderer indicating
+what node type they can depict. The renderer is then used to draw visualizations of a tree or of individual nodes.
 It is possible to have multiple renderers and switch between them in order to use different sets of visualizations.
 
 The scene accepts user input events from associated views and propagates them to the appropriate item (e.g. the item
@@ -27,11 +27,11 @@ under the cursor or the focused item). Each scene also has a default SceneHandle
 processed by any other item on the scene will be forwarded to this object. Default interaction mechanisms can be
 implemented there. The scene is automatically updated after the user interacts with any of its associated views.
 
-Items on the scene need to be updated whenever a change in the model or in a visual representation occurs. In order
-to avoid unnecessary updates which are costly this process has been optimized to only adjust affected visual elements.
-The mechanism relies on the hierarchy of items on the scene. Whenever the visualization of an item becomes invalid,
-only it and all of its ancestors will be updated. Siblings which explicitly indicate that their visualization depends
-on the one of their parent, may also be updated.
+Items on the scene need to be updated whenever a change in the application tree or in a visual representation occurs.
+In order to avoid unnecessary updates which are costly this process has been optimized to only adjust affected visual
+elements. The mechanism relies on the hierarchy of items on the scene. Whenever the visualization of an item becomes
+invalid, only it and all of its ancestors will be updated. Siblings which explicitly indicate that their visualization
+depends on the one of their parent, may also be updated.
 
 <h3>Views</h3>
 To display the contents of a scene a View widget must be placed on the main screen of Envision. Multiple views can be
@@ -62,7 +62,7 @@ Items in Envision inherit from the Item class. It implements facilities to confi
 perform updates, to communicate with the scene, to process input events and to handle the item's style and shape.
 Subclasses are responsible for specifying what should be drawn and what children, if any, an item has.
 
-Generally items are used to visualize nodes from the application model. Some items directly correspond to a node
+Generally items are used to visualize nodes from the application tree. Some items directly correspond to a node
 (inherit from ItemWithNode), while others perform service functions in the visualization. For example a method
 item corresponds to a construct from the application tree. Other items, such as icons, layouts, lines, connectors,
 etc. might be part of a method's visualization but are only used to achieve a certain look and are not directly
