Update the credits with more information

--- a/doc/pages/credits.dox
+++ b/doc/pages/credits.dox
@@ -15,7 +15,7 @@ Dimitar Asenov - https://github.com/dimitar-asenov
 
 <br>
 Sascha Dinkel - https://github.com/Sashixi
-		- Improvements to comments and diagrams
+		- Improvements to the comments framework: diagram editor, tables, overall integration, Doxygen generation.
 
 <br>
 Andrea Helfenstein - https://github.com/helandre
