--- a/doc/pages/dev_tut_add_vis.dox
+++ b/doc/pages/dev_tut_add_vis.dox
@@ -280,7 +280,7 @@ There are three things to notice here:
 	only thing we put in the \c .cpp file. Nevertheless, this should still be done. The reason is that this is a hint
 	to gcc, where to generate the virtual table for the class and other related data structures. If we don't do this,
 	then this information will be generated in multiple plug-ins which will cause problems at run-time on Windows.
-	- There is a list of properties that we want out style to include. Each property is defined by providing the
+	- There is a list of properties that we want our style to include. Each property is defined by providing the
 	type of information it should store. Additionally we need to provide \e this and a string to the property's
 	constructor. The string is name of the tag in the XML file that will be used to read this property. By convention
 	this should be the same as the name of the property.
