--- a/doc/pages/compilation.dox
+++ b/doc/pages/compilation.dox
@@ -19,6 +19,9 @@ Other dependencies are:
 	importing C++ is preliminary and incomplete.
 	- <b>On Linux: Google Performance Tools</b>: http://code.google.com/p/gperftools/ <br /> Used for profiling.
 	- <b>For development only: Vera ++ </b>: https://bitbucket.org/verateam/vera <br /> Used for checking the code formatting style.
+	- <b>Python 3</b>: https://www.python.org/ <br/> Python is used for information scripting.
+	- <b>Boost python</b>: http://www.boost.org/doc/libs/1_58_0/libs/python/doc/ <br/> 
+	Boost python is used to provide bindings for the python scripting.
 
 To install the dependencies on Ubuntu 15.04, do the following:
 	-# Install the Qt SDK:
@@ -36,6 +39,10 @@ To install the dependencies on Ubuntu 15.04, do the following:
 		\verbatim sudo apt-get install google-perftools libgoogle-perftools-dev \endverbatim
 	-# Install the Vera++ tool which performs style checks for the code:
 		\verbatim sudo apt-get install vera++ \endverbatim
+	-# Install Python 3:
+		\verbatim sudo apt-get install python3 libpython3-dev \endverbatim
+	-# Install boost/python:
+		\verbatim sudo apt-get install libboost-python-dev \endverbatim
 
 Envision's repository contains configuration files for both Qt Creator and Eclipse. You can choose which tool you want
 to use but we recommend Qt Creator. The instructions below show you how to set-up both IDEs.
